apps/external/home-assistant/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: home-assistant
  namespace: default
spec:
  type: ExternalName
  externalName: 10.47.59.10
  ports:
    - name: http
      port: 8123
      targetPort: 8123
