apps/external/home-assistant/ingressroute.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: default
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`ha.joejad.com`)
      kind: Rule
      services:
        - name: home-assistant
          port: 8123
      middlewares:
        - name: default-headers
  tls:
    secretName: local-joejad-tls
